[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.xfs
license = Affero General Public License v3
description = A Dissect module implementing a parser for the XFS file system, commonly used by RedHat Linux distributions
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3
